documentation fixes
